升级 JDK 版本至 25
Signed-off-by: DwArFeng <915724865@qq.com>